--- a/ShareApp/app/build.gradle
+++ b/ShareApp/app/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // alternatively - just ViewModel
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    //Room database
 
+    def room_version = "2.2.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
