--- a/ShareApp/app/src/main/AndroidManifest.xml
+++ b/ShareApp/app/src/main/AndroidManifest.xml
@@ -9,9 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name=".ContentProvider.MyContentProvider"
+            android:authorities="shareapp"
+            android:enabled="true"
+            android:exported="true"></provider>
 
-        <activity android:name=".View.WelcomeActivity"></activity>
-
+        <activity android:name=".View.WelcomeActivity" />
         <activity android:name=".View.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
