--- a/ShareApp/app/src/main/AndroidManifest.xml
+++ b/ShareApp/app/src/main/AndroidManifest.xml
@@ -3,17 +3,24 @@
     package="com.example.shareapp">
 
     <application
+        android:name=".Model.NotificationApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <receiver
+            android:name=".Broadcast.MyNorifiReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
         <provider
             android:name=".ContentProvider.MyContentProvider"
             android:authorities="shareapp"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:exported="true" />
 
         <activity android:name=".View.WelcomeActivity" />
         <activity android:name=".View.MainActivity">
